--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'org.greenrobot.greendao'
     id 'com.android.application'
 }
 
@@ -39,4 +40,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+    implementation 'com.jakewharton:butterknife:8.0.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.0.1'
+    //GreenDao依赖添加
+    implementation 'org.greenrobot:greendao:3.3.0'
+}
+
+greendao {
+    //数据库schema版本，也可以理解为数据库版本号
+    schemaVersion 1
+    //自动生成的文件(DaoMaster、DaoSession、XXXDao)的包名
+    daoPackage "com.quarkboom.smartcounter"
+    //自动生成文件所在目录
+    targetGenDir 'src/main/java/'
 }
